--- a/poc-server/Cargo.toml
+++ b/poc-server/Cargo.toml
@@ -15,15 +15,14 @@ path = "src/main.rs"
 warp = "0.2.4"
 futures = { version = "0.3", default-features = false, features = ["alloc"] }
 tokio = { version = "0.2.22", features = ["fs", "stream", "sync", "time", "macros"]}
-dns-lookup= "1.0.3"
 tonic = {version = "0.3.0", features=["tls"]}
 prost = "0.6"
 async-stream = "0.3.0"
 serde_json = "1.0"
 lazy_static = "1.4.0"
 uuid = { version = "0.8", features = ["serde", "v4"] }
-job_scheduler = "1.2.1"
-cdrs = { version = "2" }
+azure_sdk_cosmos = "0.100.3"
+serde = "1.0.116"
 
 [build-dependencies]
 tonic-build = "0.3"
